content/sensu-go/5.0/getting-started/platforms.md
---
title: "Supported platforms"
linkTitle: "Supported Platforms"
description: "List of supported platforms for the Sensu backend, agent, and command-line tool"
version: "5.0"
weight: 5
product: "Sensu Go"
menu:
  sensu-go-5.0:
    parent: getting-started
---

### Sensu backend

The Sensu backend is available for 64-bit Linux.
See the [backend installation guide][1] for more information.

| Platform & Version | 64bit | 32bit | | |
|--------------------|-------|-------|---|---|
| CentOS 5           | ✅     |      | | |
| CentOS 6           | ✅     |      | | |
| CentOS 7           | ✅     |      | | |
| Ubuntu 16.04       | ✅     |      | | |
| Ubuntu 16.10       | ✅     |      | | |
| Ubuntu 17.04       | ✅     |      | | |
| Ubuntu 17.10       | ✅     |      | | |
| Ubuntu 18.04       | ✅     |      | | |
| Ubuntu 18.10       | ✅     |      | | |

### Sensu agent

The Sensu agent is available for Linux and Windows.
See the [agent installation guide][2] for more information.

| Platform & Version | 64bit | 32bit | | |
|--------------------|-------|-------|---|---|
| CentOS 5           | ✅     | ✅    | | |
| CentOS 6           | ✅     | ✅    | | |
| CentOS 7           | ✅     | ✅    | | |
| Ubuntu 16.04       | ✅     | ✅    | | |
| Ubuntu 16.10       | ✅     | ✅    | | |
| Ubuntu 17.04       | ✅     | ✅    | | |
| Ubuntu 17.10       | ✅     | ✅    | | |
| Ubuntu 18.04       | ✅     | ✅    | | |
| Ubuntu 18.10       | ✅     | ✅    | | |
| Windows 2012r2     | ✅     | ✅    | | |

### Sensuctl command-line tool

Sensuctl is available for Linux, Windows, and macOS.
See the [sensuctl installation guide][3] for more information.

| Platform & Version | 64bit | 32bit | | |
|--------------------|-------|-------|---|---|
| CentOS 5           | ✅     | ✅    | | |
| CentOS 6           | ✅     | ✅    | | |
| CentOS 7           | ✅     | ✅    | | |
| Ubuntu 16.04       | ✅     | ✅    | | |
| Ubuntu 16.10       | ✅     | ✅    | | |
| Ubuntu 17.04       | ✅     | ✅    | | |
| Ubuntu 17.10       | ✅     | ✅    | | |
| Ubuntu 18.04       | ✅     | ✅    | | |
| Ubuntu 18.10       | ✅     | ✅    | | |
| Windows 2012r2     | ✅     | ✅    | | |
| macOS 10.12        | ✅     | ✅    | | |
| macOS 10.13        | ✅     | ✅    | | |
| macOS 10.14        | ✅     | ✅    | | |

[1]: ../../installation/install-sensu#install-the-sensu-backend
[2]: ../../installation/install-sensu#install-the-sensu-agent
[3]: ../../installation/install-sensu#install-sensuctl
